tests/errors/test_84.x
// Duplicate method declarations

fn (v: i64) square() -> i64 {
	return v * v;
}

fn (v: i64) square() -> i64 {
	return v * v;
}

fn main() -> void {}
